Added branding Element: Backend Icons and Logo

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
+# Added by Payload
 # Database connection string
-DATABASE_URI=mongodb://127.0.0.1/payload-template-website
-
+DATABASE_URI=mongodb://localhost:27017/316-group
 # Used to encrypt JWT tokens
-PAYLOAD_SECRET=YOUR_SECRET_HERE
-
+PAYLOAD_SECRET=69b93a5967e54fd012564e6c
 # Used to configure CORS, format links and more. No trailing slash
-NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+NEXT_PUBLIC_SERVER_URL=http://77.223.215.238:3000
