--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Added by Payload
 # Database connection string
-DATABASE_URI=mongodb://localhost:27017/316-group
+DATABASE_URI=mongodb://root:ChristMan316!@localhost:27017/316-group
 # Used to encrypt JWT tokens
 PAYLOAD_SECRET=69b93a5967e54fd012564e6c
 # Used to configure CORS, format links and more. No trailing slash
