--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: Install dependencies
-      run: pnpm install && pnpm build
+      run: npm install -g pnpm && pnpm install && pnpm build
 
     - name: SSH into server and deploy
       env:
