--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/themes": "^3.1.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -48,6 +49,8 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "7.45.4",
     "sharp": "0.32.6",
+    "sonner": "^1.5.0",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
