getting ready to use traefik

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,57 @@
-version: '3'
+version: '3.9'
 
 services:
-  # payload:
-  #   image: node:18-alpine
-  #   ports:
-  #     - '3000:3000'
-  #   volumes:
-  #     - .:/home/node/app
-  #     - node_modules:/home/node/app/node_modules
-  #   working_dir: /home/node/app/
-  #   command: sh -c "yarn install && yarn dev"
-  #   depends_on:
-  #     - mongo
-  #   env_file:
-  #     - .env
+  payload:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - '3000:3000'
+    volumes:
+      - .:/home/node/app
+      - node_modules:/home/node/app/node_modules
+    working_dir: /home/node/app
+    command: sh -c "pnpm install && pnpm start"
+    depends_on:
+      - mongo
+    env_file:
+      - .env
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.payload.rule=Host(`77.223.214.122`)'
+      - 'traefik.http.routers.payload.entrypoints=web'
 
   mongo:
     image: mongo:latest
     restart: always
-    ports:
-      - '27020:27017'
+    # ports:
+    #   - '27017:27017'
     command:
       - --storageEngine=wiredTiger
     volumes:
-      - data:/data/db
+      - mongodb-data:/data/db
     logging:
       driver: none
 
+  traefik:
+    image: traefik:v2.10
+    command:
+      - --api.insecure=true
+      - --providers.docker=true
+      - --entrypoints.web.address=:80
+    ports:
+      - '80:80'
+      - '8080:8080'
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./traefik/traefik.yml:/etc/traefik/traefik.yml
+    restart: always
+
 volumes:
-  data:
-  # node_modules:
+  mongodb-data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /var/lib/docker-volumes/mongodb-data
+  node_modules:
