--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,15 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: SSH into server and deploy
-      env:
-        SERVER_PASSWORD: ${{ secrets.SERVER_PASSWORD }}
-      run: |
-        sshpass -p $SERVER_PASSWORD ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USERNAME }}@${{ secrets.SERVER_IP }} <<EOF
-          cd /var/www/316-group
-          pm2 stop 316-group
-          git pull origin
-          pnpm install
-          pnpm build
-          pm2 start 316-group
-        EOF
+      - name: SSH into server and deploy
+        env:
+          SERVER_PASSWORD: ${{ secrets.SERVER_PASSWORD }}
+        run: |
+          sshpass -p $SERVER_PASSWORD ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USERNAME }}@${{ secrets.SERVER_IP }} <<EOF
+            cd 316-group
+            git pull origin
+          EOF
