--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next": "^15.0.3",
     "payload": "latest",
     "payload-admin-bar": "^1.0.6",
+    "payloadcms-lexical-ext": "^0.5.1",
     "prism-react-renderer": "^2.3.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
