--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - '8080:8080'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./traefik/traefik.yml:/etc/traefik/traefik.yml
+      - ../traefik/traefik.yml:/etc/traefik/traefik.yml
     networks: # Connect to the 'web' network
       - web
     restart: always
