--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,10 @@ services:
       - --providers.docker=true
       - --providers.file.watch=true
       - --entrypoints.web.address=:80
+      - --metrics.prometheus=true
+      - --metrics.prometheus.addrouterslabels=true
+      - --metrics.prometheus.addServicesLabels=true
+      - --metrics.prometheus.addEntryPointsLabels=true
     ports:
       - '80:80'
       - '8080:8080'
