--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - --metrics.prometheus.addrouterslabels=true
       - --metrics.prometheus.addServicesLabels=true
       - --metrics.prometheus.addEntryPointsLabels=true
+      - --metrics.prometheus.headerlabels.label=headerKey
     ports:
       - '80:80'
       - '8080:8080'
