--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,6 @@
 version: '3.9'
 
 services:
-  # payload:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   env_file:
-  #     - .env
-  #   labels:
-  #     - 'traefik.enable=true'
-  #     - 'traefik.http.routers.payload.rule=Host(`payload.local`)'
-  #     - 'traefik.http.routers.payload.entrypoints=web'
-  #     - 'traefik.http.services.payload.loadbalancer.server.port=3000'
-  #   networks: # Connect to the 'web' network
-  #     - web
-  #   depends_on:
-  #     - traefik
   traefik:
     image: traefik:v2.10
     command:
@@ -42,7 +27,7 @@ services:
       options:
         max-size: '10m'
         max-file: '3'
-    restart: always
+    restart: unless-stopped
 
   payload:
     build:
@@ -63,7 +48,7 @@ services:
       - 'traefik.http.routers.payload-media.rule=PathPrefix(`/media`)'
       - 'traefik.http.routers.payload-media.entrypoints=web'
       - 'traefik.http.routers.payload.entrypoints=web'
-      - 'traefik.http.services.payload.loadbalancer.server.port=3000' # This is essential
+      - 'traefik.http.services.payload.loadbalancer.server.port=3000'
       - 'traefik.http.middlewares.large-upload.headers.customrequestheaders.Content-Length=524288000'
       - 'traefik.http.routers.payload.middlewares=large-upload'
     networks:
@@ -72,8 +57,8 @@ services:
       - traefik
     volumes:
       - ./public/media:/app/public/media
-    restart: always
+    restart: unless-stopped
 
-networks: # Define the 'web' network
+networks: # Create a network called 'web'
   web:
     external: false
