--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,5 @@ jobs:
             git pull origin
             docker compose build payload
             docker compose up -d
-            docker builder prune
+            docker builder prune -f
           EOF
