--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,15 @@ jobs:
           SERVER_PASSWORD: ${{ secrets.SERVER_PASSWORD }}
         run: |
           sshpass -p $SERVER_PASSWORD ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USERNAME }}@${{ secrets.SERVER_IP }} <<EOF
-            docker builder prune -f
             cd 316-group
             git pull origin
+            CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD)
+            if echo "$CHANGED_FILES" | grep -qE 'package.json|pnpm-lock.yaml'; then
+              echo "Dependencies have changed. Installing dependencies..."
+              pnpm install
+            else
+              echo "Dependencies unchanged. Skipping install."
+            fi
             docker compose build payload
             docker compose up -d
             docker builder prune -f
