--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ services:
       - traefik
     volumes:
       - ./public/media:/app/public/media
+      - ./node_modules:/app/node_modules
     restart: unless-stopped
 
 networks: # Create a network called 'web'
