--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,6 @@ services:
       - --providers.file.watch=true
       - --entrypoints.web.address=:80
       - --metrics.prometheus=true
-      - --metrics.prometheus.buckets=0.1,0.3,1.2,5.0
-      - --metrics.prometheus.addrouterslabels=true
-      - --metrics.prometheus.addServicesLabels=true
-      - --metrics.prometheus.addEntryPointsLabels=true
-      - --metrics.prometheus.headerlabels.label=headerKey
     ports:
       - '80:80'
       - '8080:8080'
@@ -38,6 +33,23 @@ services:
       - '9090:9090'
     networks:
       - web
+
+  grafana:
+    image: grafana/grafana:latest
+    environment:
+      - GF_SECURITY_ADMIN_USER=${ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - GF_DATASOURCES__DATASOURCES_0_NAME=Prometheus
+      - GF_DATASOURCES__DATASOURCES_0_TYPE=prometheus
+      - GF_DATASOURCES__DATASOURCES_0_URL=${PROMETHEUS_HOST}
+      - GF_DATASOURCES__DATASOURCES_0_ACCESS=proxy
+    ports:
+      - '3001:3000'
+    networks:
+      - web
+    env_file:
+      - .env
+    restart: unless-stopped
 
   payload:
     build:
