--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,3 @@
-# Ignore node_modules to avoid conflicts
-# node_modules
 
 # Ignore version control files
 .git
@@ -16,6 +14,10 @@ logs
 # Ignore environment files for security
 # .env
 # .env.*
+
+
+# Ignore node_modules to avoid conflicts
+node_modules
 
 # Ignore build artifacts and caches
 .next
