--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,6 @@ services:
     env_file:
       - .env
     volumes:
-      - ./public/media:/app/public/media
+      - ./public/media:/app/public/media:rw
+    user: '1001:1001'
     restart: always
