--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
             git pull origin
             echo "Installing dependencies..."
             pnpm install
-            docker compose build payload
+            docker compose build payload_main
             docker compose up -d
             docker builder prune -f
           EOF
