--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@payloadcms/db-mongodb": "latest",
-    "@payloadcms/email-nodemailer": "^3.43.0",
-    "@payloadcms/live-preview-react": "latest",
-    "@payloadcms/next": "latest",
-    "@payloadcms/payload-cloud": "latest",
-    "@payloadcms/plugin-form-builder": "latest",
-    "@payloadcms/plugin-nested-docs": "latest",
-    "@payloadcms/plugin-redirects": "latest",
-    "@payloadcms/plugin-search": "latest",
-    "@payloadcms/plugin-seo": "latest",
-    "@payloadcms/richtext-lexical": "latest",
-    "@payloadcms/ui": "latest",
+    "@payloadcms/db-mongodb": "3.46.0",
+    "@payloadcms/email-nodemailer": "3.46.0",
+    "@payloadcms/live-preview-react": "3.46.0",
+    "@payloadcms/next": "3.46.0",
+    "@payloadcms/payload-cloud": "3.46.0",
+    "@payloadcms/plugin-form-builder": "3.46.0",
+    "@payloadcms/plugin-nested-docs": "3.46.0",
+    "@payloadcms/plugin-redirects": "3.46.0",
+    "@payloadcms/plugin-search": "3.46.0",
+    "@payloadcms/plugin-seo": "3.46.0",
+    "@payloadcms/richtext-lexical": "3.46.0",
+    "@payloadcms/ui": "3.46.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.0.2",
@@ -45,7 +45,7 @@
     "jsonwebtoken": "9.0.2",
     "lucide-react": "^0.378.0",
     "next": "^15.0.3",
-    "payload": "latest",
+    "payload": "3.46.0",
     "payload-admin-bar": "^1.0.6",
     "payloadcms-lexical-ext": "^0.5.1",
     "prism-react-renderer": "^2.3.1",
