--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "framer-motion": "^12.0.1",
     "geist": "^1.3.1",
     "graphql": "^16.10.0",
+    "input-otp": "^1.4.2",
     "jsonwebtoken": "9.0.2",
     "lucide-react": "^0.378.0",
     "next": "^15.1.4",
