--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@payloadcms/plugin-search": "3.70.0",
     "@payloadcms/plugin-seo": "3.70.0",
     "@payloadcms/richtext-lexical": "3.70.0",
+    "@payloadcms/storage-s3": "3.70.0",
     "@payloadcms/ui": "3.70.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.14",
