feat(brands): add brands collection with dynamic page components
- Add new 'brands' collection with hero, content sections, and SEO fields
- Implement brand page route with dynamic slug-based rendering
- Create seven brand-specific React components for different content sections
- Add revalidation hook to cache brand pages when published/unpublished
- Update text classes field to include max-width utilities
- Configure email adapter from nodemailer to resend

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@payloadcms/db-mongodb": "3.70.0",
     "@payloadcms/email-nodemailer": "3.70.0",
+    "@payloadcms/email-resend": "^3.76.1",
     "@payloadcms/live-preview-react": "3.70.0",
     "@payloadcms/next": "3.70.0",
     "@payloadcms/payload-cloud": "3.70.0",
