--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "7.45.4",
     "react-icons": "^5.5.0",
-    "sharp": "0.32.6",
+    "sharp": "^0.33.5",
     "sonner": "^1.7.1",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
